<resources>
    <string name="app_name">QuizzApp</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="buttontrue">verdadero</string>
    <string name="buttonfalse">falso</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="question_africa">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="back_button">Back</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong</string>
</resources>